syntax = "proto3";

option csharp_namespace = "GrpcCalcularJuros";

package CalcularJurosApi;

service CalcularJuros {

}
